Convert SerialConsistencyOverrideOperationTest